--- a/src/css/output.css
+++ b/src/css/output.css
@@ -582,6 +582,18 @@ video {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.inset-0 {
+  inset: 0px;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -603,8 +615,32 @@ video {
   margin-top: 5rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
+}
+
+.h-40 {
+  height: 10rem;
+}
+
+.h-\[300vh\] {
+  height: 300vh;
+}
+
+.h-\[50vh\] {
+  height: 50vh;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .h-screen {
@@ -617,6 +653,10 @@ video {
 
 .w-16 {
   width: 4rem;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .max-w-screen-lg {
@@ -635,6 +675,10 @@ video {
   justify-content: center;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -643,11 +687,6 @@ video {
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .text-4xl {
@@ -672,10 +711,30 @@ body {
   background-color: rgb(32, 32, 77);
 }
 
-.black-box {
-  height: 200px;
-  width: 200px;
-  background-color: black;
+/* #drawing-container {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+
+
+#drawing-container.drawing {
+  opacity: 1;
+} */
+
+#about-me-sect {
+  display: none;
+  animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 /* this is an example of creating a custom style class for tailwind css
