--- a/src/css/output.css
+++ b/src/css/output.css
@@ -611,6 +611,10 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .ml-20 {
   margin-left: 5rem;
 }
@@ -625,10 +629,6 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
 }
 
 .block {
@@ -683,6 +683,10 @@ video {
   width: 100%;
 }
 
+.w-36 {
+  width: 9rem;
+}
+
 .max-w-screen-lg {
   max-width: 1024px;
 }
@@ -724,9 +728,9 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-gray-200 {
+.bg-bubble {
   --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+  background-color: rgb(17 63 55 / var(--tw-bg-opacity));
 }
 
 .px-3 {
@@ -781,11 +785,6 @@ video {
   line-height: 1.75rem;
 }
 
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -798,20 +797,14 @@ video {
   font-style: italic;
 }
 
-.text-gray-700 {
+.text-bubble-text {
   --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
+  color: rgb(5 179 150 / var(--tw-text-opacity));
 }
 
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 body {
@@ -861,6 +854,55 @@ body {
 
 .cardHover:hover {
   background-color: rgb(37, 37, 77);
+}
+
+#projects-section > div {
+  position: relative;
+  margin: 1em;
+  padding: 1em 2em;
+  font-size: inherit;
+  font-weight: 700;
+  background: none;
+  border: 0;
+  box-sizing: border-box;
+}
+
+.draw {
+  position: relative;
+  overflow: hidden;
+}
+
+.draw::before,
+.draw::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  background-color: transparent;
+  transition: width 0.5s ease-out, background-color 0.5s ease-out;
+}
+
+.draw::before {
+  top: 0;
+  left: 0;
+  transform-origin: left;
+}
+
+.draw::after {
+  bottom: 0;
+  right: 0;
+  transform-origin: right;
+}
+
+.draw:hover::before,
+.draw:hover::after {
+  width: 100%;
+  background-color: #00FFFF;
+}
+
+.active {
+  font-weight: bold;
+  zoom: 1.1;
 }
 
 /* this is an example of creating a custom style class for tailwind css
