--- a/src/css/input.css
+++ b/src/css/input.css
@@ -6,6 +6,8 @@ body {
   background-color: rgb(32, 32, 77);
 }
 
+
+
 #about-me-sect {
   display: none;
 }
@@ -100,10 +102,50 @@ body {
 }
 
 
-.active {
-    font-weight: bold;
-    zoom: 1.1;
+
+.navBtn {
+  font-size: smaller;
+  
 }
+
+/* .hr-active {
+  width: 100px;
+  height: 4px;
+  color: white;
+  padding-bottom: 3px;
+
+}
+
+.hr-active.active {
+  animation: hrGrow 0.5s ease-in;
+
+}
+
+@keyframes hrGrow {
+  0% {
+    width: 100px;
+  }
+
+  100% {
+    width: 130px;
+  }
+} */
+
+.hr-active {
+  width: 100px;
+  height: 4px;
+  background-color: #000;
+  transform-origin: left;
+  transition: width 0.5s, background-color 0.5s;
+  opacity: 0.7;
+}
+
+.hr-active.active {
+  width: 140px;
+  background-color: #00FFFF;
+  opacity: 1;
+}
+
 
 /* this is an example of creating a custom style class for tailwind css
  @layer utilities {
