--- a/src/css/input.css
+++ b/src/css/input.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
+
 body {
   background-color: rgb(32, 32, 77);
 }
@@ -146,6 +156,13 @@ body {
   opacity: 1;
 }
 
+.social-btn{
+  opacity: 0.6;
+}
+.social-btn:hover {
+  opacity: 1;
+ 
+}
 
 /* this is an example of creating a custom style class for tailwind css
  @layer utilities {
