--- a/src/css/input.css
+++ b/src/css/input.css
@@ -164,6 +164,22 @@ body {
  
 }
 
+
+
+#welcome-spacer {
+  width: 20vw;
+  height: 30vh;
+  max-height: 30vh;
+}
+
+.animate-move-into-sidebar {
+  margin-left: 0;
+  font-size: smaller;
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+
+
 /* this is an example of creating a custom style class for tailwind css
  @layer utilities {
   .btn-primary {
