--- a/src/css/output.css
+++ b/src/css/output.css
@@ -716,12 +716,12 @@ video {
   height: 100%;
 }
 
-.w-1\/2 {
-  width: 50%;
+.h-20 {
+  height: 5rem;
 }
 
-.w-1\/4 {
-  width: 25%;
+.w-1\/2 {
+  width: 50%;
 }
 
 .w-10 {
@@ -834,6 +834,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
@@ -919,6 +924,11 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-4xl {
@@ -1034,6 +1044,10 @@ body::-webkit-scrollbar-thumb {
   animation: fadeIn 0.3s ease-in-out;
 }
 
+p {
+  font-weight: normal;
+}
+
 .fadeOut {
   animation: fadeOut 0.3s ease-in-out;
   opacity: 0;
@@ -1074,7 +1088,7 @@ body::-webkit-scrollbar-thumb {
 #projects-section > div {
   position: relative;
   margin: 1em;
-  padding: 1em 2em;
+  padding: 0.5em 1em;
   font-size: inherit;
   font-weight: 700;
   /* background: none; */
@@ -1215,5 +1229,11 @@ body::-webkit-scrollbar-thumb {
 @media (min-width: 768px) {
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:flex {
+    display: flex;
   }
 }
