--- a/src/css/output.css
+++ b/src/css/output.css
@@ -761,12 +761,12 @@ video {
   resize: none;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -1187,6 +1187,10 @@ p {
   opacity: 1;
 } */
 
+.hr-nav-container {
+  font-size: 16px;
+}
+
 .hr-nav-container:hover .hr-active {
   width: 150px;
   transform-origin: left;
@@ -1196,11 +1200,14 @@ p {
 .social-btn{
   opacity: 0.6;
   mix-blend-mode: difference;
-  color: rgb(255, 4, 4);
 }
 
 .social-btn:hover {
   opacity: 1;
+}
+
+#social-btns-footer {
+  color: white;
 }
 
 #welcome-spacer {
@@ -1240,27 +1247,23 @@ p {
 }
 
 @media (min-width: 640px) {
-  .sm\:grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
+  .sm\:block {
+    display: block;
   }
 }
 
 @media (min-width: 768px) {
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .md\:hidden {
+    display: none;
   }
 
-  .md\:grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
 @media (min-width: 1024px) {
   .lg\:flex {
     display: flex;
-  }
-
-  .lg\:grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 }
