some code clean up

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -2,42 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-
 .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
-
 
 body {
   background-color: rgb(32, 32, 77);
   font-size: 12px;
-  font-family: 'Tilt Neon', sans-serif;
+  font-family: "Tilt Neon", sans-serif;
 }
 body::-webkit-scrollbar {
-  width: 12px;     
+  width: 12px;
 }
 
 body::-webkit-scrollbar-track {
-  background: rgb(3, 2, 0);  
+  background: rgb(3, 2, 0);
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #00FFFF;   
-  border-radius: 20px;      
-  border: 3px solid black; 
+  background-color: #00ffff;
+  border-radius: 20px;
+  border: 3px solid black;
 }
-
-/* #about-me-sect {
-  display: none;
-} */
 
 .fadeIn {
   animation: fadeIn 0.3s ease-in-out;
- 
 }
 
 p {
@@ -76,11 +65,9 @@ p {
   }
 }
 
-
 .cardHover:hover {
   background-color: rgb(37, 37, 77);
 }
-
 
 #projects-section > div {
   position: relative;
@@ -98,68 +85,9 @@ p {
   background-color: aquamarine;
 }
 
-/* .draw {
-  position: relative;
-  overflow: hidden;
-}
-
-.draw::before,
-.draw::after {
-  content: '';
-  position: absolute;
-  width: 0;
-  height: 2px;
-  background-color: transparent;
-  transition: width 0.5s ease-out, background-color 0.5s ease-out;
-}
-
-.draw::before {
-  top: 0;
-  left: 0;
-  transform-origin: left;
-}
-
-.draw::after {
-  bottom: 0;
-  right: 0;
-  transform-origin: right;
-}
-
-.draw:hover::before,
-.draw:hover::after {
-  width: 100%;
-  background-color: #00FFFF;
-} */
-
-
-
 .navBtn {
   font-size: smaller;
-  
 }
-
-/* .hr-active {
-  width: 100px;
-  height: 4px;
-  color: white;
-  padding-bottom: 3px;
-
-}
-
-.hr-active.active {
-  animation: hrGrow 0.5s ease-in;
-
-}
-
-@keyframes hrGrow {
-  0% {
-    width: 100px;
-  }
-
-  100% {
-    width: 130px;
-  }
-} */
 
 .hr-active {
   width: 100px;
@@ -172,15 +100,9 @@ p {
 
 .hr-active.active {
   width: 140px;
-  background-color: #00FFFF;
+  background-color: #00ffff;
   opacity: 1;
 }
-
-/* .hr-active:hover {
-  width: 140px;
-  
-  opacity: 1;
-} */
 
 .hr-nav-container {
   font-size: 16px;
@@ -191,36 +113,20 @@ p {
   transition: width 0.5s, background-color 0.5s;
 }
 
-
-.social-btn{
+.social-btn {
   opacity: 0.6;
   mix-blend-mode: difference;
-
 }
 
 .social-btn:hover {
   opacity: 1;
- 
 }
 #social-btns-footer {
   color: white;
 }
-
 
 #welcome-spacer {
   width: 20vw;
   height: 30vh;
   max-height: 30vh;
 }
-
-
-
-/* this is an example of creating a custom style class for tailwind css
- @layer utilities {
-  .btn-primary {
-     @apply bg-blue-500 text-white py-2 px-4 rounded;
-  }
- }
-
-
- <button class="btn-primary">Click me</button> */
