--- a/src/css/input.css
+++ b/src/css/input.css
@@ -126,7 +126,8 @@ p {
 }
 
 #welcome-spacer {
-  width: 20vw;
-  height: 30vh;
+ 
+  margin-right: 2rem;
+  /* height: 30vh; */
   max-height: 30vh;
 }
