--- a/src/css/output.css
+++ b/src/css/output.css
@@ -631,10 +631,6 @@ video {
   margin-bottom: 1.25rem;
 }
 
-.ml-20 {
-  margin-left: 5rem;
-}
-
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -661,6 +657,10 @@ video {
 
 .inline-block {
   display: inline-block;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -690,10 +690,6 @@ video {
 
 .h-full {
   height: 100%;
-}
-
-.w-1\/2 {
-  width: 50%;
 }
 
 .w-10 {
@@ -901,11 +897,6 @@ video {
   text-align: center;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -924,6 +915,11 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .font-bold {
@@ -960,11 +956,6 @@ video {
 .text-bubble-text {
   --tw-text-opacity: 1;
   color: rgb(5 179 150 / var(--tw-text-opacity));
-}
-
-.text-teal-500 {
-  --tw-text-opacity: 1;
-  color: rgb(20 184 166 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1113,8 +1104,8 @@ p {
 }
 
 #welcome-spacer {
-  width: 20vw;
-  height: 30vh;
+  margin-right: 2rem;
+  /* height: 30vh; */
   max-height: 30vh;
 }
 
