--- a/src/css/input.css
+++ b/src/css/input.css
@@ -30,7 +30,9 @@ body::-webkit-scrollbar-thumb {
   animation: fadeIn 0.3s ease-in-out;
 }
 
-
+#scroll-top {
+  background-color: aquamarine;
+}
 
 p {
   font-weight: normal;
