improved UI for theme toggle

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -704,8 +704,8 @@ video {
   width: 75%;
 }
 
-.w-\[10vw\] {
-  width: 10vw;
+.w-\[15vw\] {
+  width: 15vw;
 }
 
 .w-fit {
@@ -715,10 +715,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[15vw\] {
-  width: 15vw;
 }
 
 .max-w-\[550px\] {
@@ -796,11 +792,6 @@ video {
 .border-\[\#e0e0e0\] {
   --tw-border-opacity: 1;
   border-color: rgb(224 224 224 / var(--tw-border-opacity));
-}
-
-.bg-\[\#510176\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(81 1 118 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#6A64F1\] {
@@ -1038,6 +1029,14 @@ background-color: aquamarine;
 
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+}
+
+#light-dark-toggle {
+  height: 50px;
+  width: 80px;
+  /* background-color: black; */
+  color:white;
+  border: 2px solid white;
 }
 
 body {
