--- a/src/css/input.css
+++ b/src/css/input.css
@@ -45,6 +45,14 @@ background-color: aquamarine;
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
+#light-dark-toggle {
+  height: 50px;
+  width: 80px;
+  /* background-color: black; */
+  color:white;
+  border: 2px solid white;
+}
+
 body {
   /* background-color: rgb(32, 32, 77); */
   font-size: 12px;
