--- a/src/css/input.css
+++ b/src/css/input.css
@@ -49,7 +49,7 @@ background-color: aquamarine;
   height: 50px;
   width: 80px;
   /* background-color: black; */
-  color:white;
+  color: white;
   border: 2px solid white;
 }
 
@@ -72,7 +72,6 @@ body::-webkit-scrollbar-thumb {
   border-radius: 20px;
   border: 3px solid black;
 }
-
 
 .fadeIn {
   animation: fadeIn 0.3s ease-in-out;
@@ -138,7 +137,6 @@ p {
   font-size: smaller;
 }
 
-
 .hr-active {
   width: 100px;
   height: 4px;
@@ -181,7 +179,6 @@ p {
   max-height: 30vh;
 }
 
-
 .switch {
   position: relative;
   display: inline-block;
@@ -189,13 +186,11 @@ p {
   height: 34px;
 }
 
-
 .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
-
 
 .light-dark-slider {
   position: absolute;
@@ -205,7 +200,7 @@ p {
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  transition: .4s;
+  transition: 0.4s;
   border-radius: 34px;
 }
 
@@ -217,22 +212,19 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: .4s;
+  transition: 0.4s;
   border-radius: 50%;
 }
 
 #icon-container {
   left: 4px;
-  transition: left 0.4s ease-in-out; 
+  transition: left 0.4s ease-in-out;
 }
 
 input:checked + .light-dark-slider {
   background-color: #1c1636;
 }
 
-
 input:checked + .light-dark-slider > #icon-container {
-  left: calc(100% - 30px); 
+  left: calc(100% - 30px);
 }
-
-
